vlib/v/checker/tests/go_append_optional_to_threads_err.vv
fn foo() ! {}

fn main() {
	mut ths := []thread{}
	ths << go foo()
	ths.wait()
}
